Changed mysql db to support multiple user posts
Updated the schema.prisma file to relate multiple user posts to the user and removed the reference 'userId' to the user to simplify the db. I also changed some req.body fields to multi user posts.
