# backend/routes/index.js
@@ -42,8 +42,8 @@ app.use('/api/users', require('./users/updateUser'));
 app.use('/api/users', require('./users/deleteUser'));
 app.use('/api/users', require('./users/createPost'));
 app.use('/api/users', require('./users/midi'));
-app.use('/api/users', require('./users/getPostsByID'));
-// app.use('/api/users', require('./users/jwtStuff'));
+app.use('/api/users', require('./users/getPostsByUsername'));
+app.use('/api/users', require('./users/jwtStuff'));
 app.use('/api/users', require('./users/sendVerificationEmail'));
 
 app.listen(PORT, () => console.log(`Server running on port ${PORT}`));
