# backend/routes/users/getPostsByID.js
@@ -1,35 +1,0 @@
-const router = require("express").Router();
-const { PrismaClient } = require("@prisma/client");
-const prisma = new PrismaClient();
-const { user, post } = new PrismaClient();
-
-//Get user post information by ID
-router.get('/getPostsByID', async (req, res) => {
-    const userId =  req.body.userId
-    // const userExist = await prisma.user.findUnique({
-    //     where: { id: userId  },
-    // });
-
-    // if(!userExist) {
-    //     return res.status(400).json({
-    //         msg: "User not found"
-    //     })
-    // }
-    const posts = await prisma.post.findMany({
-        where: { userId: userId }, 
-        select: {
-            user: true,
-            title: true,
-            bpm: true,
-            key: true,
-            midi: true,
-            data: true,
-            createdAt: true,
-            updatedAt: true,
-            // post: true
-        }
-    });
-    res.status(200).send({Object: posts});
-})
-
-module.exports = router;
