# backend/routes/users/midi.js
@@ -9,9 +9,10 @@ var MidiWriter = require('midi-writer-js')
 
 router.post('/midi', async (req, res) => {  
   
-        const { userId, bpm, key} =  req.body
+        // Might want to change 'userId' req body to 'username' (Dont really think we need this file)
+        const { id, bpm, key} =  req.body
         const userExists = await prisma.user.findUnique({
-            where: { id: userId  },
+            where: { id: id  },
         });
     
         if(!userExists) {
@@ -23,13 +24,13 @@ router.post('/midi', async (req, res) => {
     
         const newMidi = await prisma.post.updateMany({
             data: {
-                userId,
+                id,
                 bpm, // TODO
                 key, // C#M - C sharp major
             }
             
         })
-        res.json(newMidi)
+        res.status(200).send({Object: newMidi});
      }
 })
 module.exports = router;
